--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "firebase": "^10.14.0",
+    "firebase": "^11.5.0",
     "lucide-react": "^0.456.0",
+    "playwright": "^1.51.1",
     "react": "^18.3.1",
     "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^18.3.1",
@@ -37,7 +38,7 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
+    "vite": "^6.2.4",
     "vite-plugin-svgr": "^4.3.0"
   }
 }
